--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
 asgiref==3.5.2
+bleach==5.0.1
+dj-database-url==0.5.0
 Django==3.2.13
+django-crispy-forms==1.14.0
+django-debug-toolbar==3.5.0
+django-extensions==3.2.0
+django-heroku==0.3.1
+django-multi-captcha-admin==2.0.0
+django-ranged-response==0.2.0
+django-robots==5.0
+django-simple-captcha==0.5.17
+django-summernote==0.8.20.0
+django-taggit==3.0.0
+gunicorn==20.1.0
+Pillow==9.1.1
+psycopg2==2.9.3
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
-Pillow
+webencodings==0.5.1
+whitenoise==6.1.0
