--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ django-summernote==0.8.20.0
 django-taggit==3.0.0
 gunicorn==20.1.0
 Pillow==9.1.1
-psycopg2==2.9.3 #bad version
+psycopg2==2.9.3 #bad version #goodone 2.7.7
 pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
